--- a/wiki/SkinDesignersGuide.wiki
+++ b/wiki/SkinDesignersGuide.wiki
@@ -13,6 +13,28 @@ If you are new to skinning, please check out the [http://www.team-mediaportal.co
 <wiki:toc max_depth="3" />
 
 = Skinner's Change Log =
+== v2.6 - v2.7 ==
+ * Added Coverflow support, to enable skin support from skin you need to add the coverflow facade control and also enable it in TVSeries.SkinSettings.xml:
+{{{
+<layouts>
+    <group List="true" SmallIcons="false" />
+    <series ListPosters="true" ListBanners="true" Filmstrip="true" WideBanners="true" Coverflow="true" />
+    <season List="true" Filmstrip="true" Coverflow="true" />
+    <episode List="true" />
+</layouts>
+}}}
+Coverflow is supported in Series and Season view and will load the Poster image into each card. If you want to control the quality of the image added, set the corresponding GraphicsQuality setting:
+{{{
+<graphicsquality import="true">
+    <seriesbanners>60</seriesbanners>
+    <seriesposters>20</seriesposters>
+    <seriescoverflow>40</seriescoverflow>    
+    <seasonbanners>75</seasonbanners>
+    <seasoncoverflow>90</seasoncoverflow>
+    <episodethumbs>90</episodethumbs>
+</graphicsquality>
+}}}
+
 == v2.5 - v2.6 ==
  * A *New* Image (indicating recently added episodes or Unwatched episodes) overlayed on Series WideBanners / Posters Filmstrip, requires a new image in the skins media directory: *tvseries_newlabel.png*. The position of the image can be controlled from TVSeries.SkinSettings.xml with the following code:
 {{{
