--- a/trunk/MP-TVSeries/Resources/Languages/en(us).xml
+++ b/trunk/MP-TVSeries/Resources/Languages/en(us).xml
@@ -298,5 +298,7 @@
 
   <string Field="TraktError" Original="Trakt Error">Trakt Error</string>
   <string Field="TraktNotEnoughInfo" Original="Not enough information to send to server.">Not enough information to send to server.</string>
+
+  <string Field="ResumeEpisode" Original="Resume episode from last time?">Resume episode from last time?</string>
   
 </strings>
